fix cart panel overflowing issues

--- a/source/stylesheets/_cart.scss
+++ b/source/stylesheets/_cart.scss
@@ -57,7 +57,8 @@ input[type=submit].button--checkout {
 }
 
 .cart-form {
-  flex: 1 0 auto;
+  flex: 1 0;
+  overflow: scroll;
 }
 
 .cart-item-container {
